2011-10-08    <h.v.raven@googlemail.com>

	* src/savingthrow.cpp (print, set_value): added support for partial and disbelief

2011-10-07    <h.v.raven@googlemail.com>

	* src/strmanip.cpp:
	* src/strmanip.h: created to_[upper|lower] and str_[upper|lower] for std::string

	* src/savingthrow.cpp (set_type, set_value): replaced multiple checks with conversion to lower case
