@@ -70,29 +70,29 @@ void Gtk_Window::display_spell( const Glib::ustring& spell_name )
   Spell spell = spells_->get_spell( spell_name );
 
   Glib::ustring result = "<span font_size=\"large\"><b>"
-    + spell.name
+    + spell[NAME].print()
     + "</b>\n</span>";
 
   result += "<b>School:</b> "
-    +spell.school.print()
+    +spell[SCHOOL].print()
     + " ";
 
   result += "<b>Level:</b> "
-    + spell.level.print();
+    + spell[LEVEL].print();
 
   result += "\n<b>Casting:</b>\n";
 
   result += "<b>Casting Time</b>: "
-    + spell.casting_time.print()
+    + spell[CASTING_TIME].print()
     + " ";
 
   result += "<b>Components:</b> "
-    + spell.components.print();
+    + spell[COMPONENTS].print();
 
   result += "\n<b>Effect:</b>\n";
 
   result += "<b>Range:</b> "
-    + spell.range.print()
+    + spell[RANGE].print()
     + " ";
 
   //  result += "<b>Target:</b> "
@@ -100,18 +100,18 @@ void Gtk_Window::display_spell( const Glib::ustring& spell_name )
   //    + "; ";
 
   result += "<b>Duration:</b> "
-    + spell.duration.print()
+    + spell[DURATION].print()
     + " ";
 
   result += "<b>Saving Throw:</b> "
-    + spell.saving_throw.print()
+    + spell[SAVING_THROW].print()
     + " ";
 
   result += "<b>Spell Resistance:</b> "
-    + spell.spell_resistance.print();
+    + spell[SPELL_RESISTANCE].print();
 
   result += "\n<b>Description:</b>\n"
-    + spell.description;
+    + spell[DESCRIPTION].print();
 
   spell_label_.set_markup( result );
 }
